--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css");
 
 html {
-    background-color: aquamarine;
+    background-color: #00008B;
 }
 
 .max-container {
